--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,3 @@
 spring.application.name=assignment
 server.port=2000
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.h2.console.enabled=true
-spring.jpa.hibernate.ddl-auto=update
+spring.data.mongodb.uri=mongodb+srv://assignment:root@assignment.943km.mongodb.net/your_database_name?retryWrites=true&w=majority&appName=assignment
