--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,12 @@
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>2.0.1.Final</version>
+		</dependency>
+
 		<!-- Spring Boot Starter Web (Required for REST Controllers) -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
